# OmniGenH7

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  prj.conf
Hardware/: OmniGen.eprj2
docs/: application-base.h  architecture_uml.md  crtp.h  dac_waveform_frequency_recommendations.md  digital_signal_generator_architecture_report.md  embedded_framework_design_guide.md  filter_bank_handoff.md  fmc_8080_16bit_materials.md  pin_assignment_summary.md  stm32h723_octospi_fmc_summary.md  task_handover_2026-05-12.md
docs/ILI9481/: drv-ili9481-cmd.h  drv-ili9481-config.h  drv-ili9481-lvgl-adaptor.cpp  drv-ili9481-lvgl-adaptor.h  drv-ili9481.cpp  drv-ili9481.h
docs/W25Qxx/: w25qxx-comm-adpter.cpp  w25qxx-inst.h  w25qxx.cpp  w25qxx.h
docs/templates/: header_template.hpp  source_template.cpp
drivers/output/: dac_wave_sink.c  ili9481_support.c
drivers/storage/: w25q64_support.c
dts/bindings/: vendor-prefixes.txt
inc/base/: result.hpp  singleton.hpp  units.hpp
inc/diagnostics/: shell_commands.hpp
inc/domain/: input_event.hpp  signal_command.hpp  signal_profile.hpp  signal_snapshot.hpp  signal_state.hpp  signal_validation.hpp  waveform_synthesis.hpp
inc/drivers/: ili9481_support.h  w25q64_support.h
inc/platform/: application_base.h  mock_wave_sink.hpp  mpu_manager.hpp  zephyr_display.hpp  zephyr_storage.hpp  zephyr_wave_sink.hpp
inc/ports/: storage_port.hpp  wave_sink_port.hpp
inc/services/: signal_engine.hpp
simulation/matlab/: dac_dual_sine.m  dac_filter_design.m  dac_sim.m  generate_sawtooth.m  generate_sine.m  generate_square.m  generate_triangle.m  generate_waveform.m  run_1mhz_filter_suite.m  simulate_recommended_filters.m  voltage_to_dac.m  waveform_generator.m
src/: main.c
src/app/: composition_root.cpp  composition_root.hpp  main.cpp
src/base/: result.hpp  units.hpp
src/diagnostics/: display_shell_commands.cpp  nor_shell_commands.cpp  shell_commands.cpp  shell_commands.hpp  shell_parse.hpp  sysres_shell_commands.cpp
src/domain/: header_template.hpp  input_event.cpp  input_event.hpp  signal_command.cpp  signal_command.hpp  signal_profile.hpp  signal_snapshot.hpp  signal_state.hpp  signal_validation.cpp  signal_validation.hpp  system_status.cpp  system_status.hpp  waveform_synthesis.cpp  waveform_synthesis.hpp
src/platform/: lv_conf.h  lvgl_port.cpp  lvgl_port.hpp  (+13 more)
(+33 files in other folders)
